# ML4RG_mmparnet

./: .gitattributes  .gitignore  CONTRACT.md  LICENSE  QUICKSTART.md  README.md  pixi.toml  pyproject.toml  requirements.txt
docs/: BASELINE_RESULTS.md  COMPARISON_RESULTS.md  CROSS_ATTENTION_COMMON68_PER_TRACK.md  CROSS_ATTENTION_EXPERIMENT_STATUS.md  CROSS_ATTENTION_HANDOFF.md  CROSS_ATTENTION_HEAD_COMPARISON_COMMON68.md  CROSS_ATTENTION_HEAD_COMPARISON_PER_TRACK.md  CROSS_ATTENTION_USAGE.md  CROSS_ATTENTION_WORKFLOW.md  DATA_INVENTORY.md  EXPERIMENT_PLAN.md  FILM_MULTITASK_WORKFLOW.md  INTEGRATION.md  MERGE_MAP.md  MERGE_PLAN.md  MODULAR_HEADS.md  PERFORMANCE_SUMMARY.md  RELATED_WORK_AND_ROADMAP.md  SCALING_AND_DATA.md
metadata/: cohort.json  eclip_manifest.json  encode_rbps.json
mmpartnet_out/: README.md  binding_biopwm_indist.json  binding_biopwm_rbp.json  binding_biopwm_recog_bias_indist.json  binding_biopwm_recog_bias_rbp.json  binding_biopwm_recog_indist.json  binding_biopwm_recog_rbp.json  binding_competence.json  binding_fair.json  binding_mechanism.json  binding_n2_xattn.json  binding_ribex.json  binding_structure.json  binding_x_p1_dimsweep.json  binding_x_p2_stringfusion.json  binding_x_p3_capacity.json  binding_x_x.json  binding_xattn_ablation.json  binding_xattn_perres.json  coral_reproduction.json  domain_stratified.json  famfull3_depeek.json  famfull3_derangement_null.json  famfull3_nearvsfar.json  famfull_confounds.json  film_profile_sanity_summary.json  m2_bakeoff_HepG2.json  m2_decompose_zsdump_HepG2.json  m2_decompose_zsdump_K562.json  (+26 more)
(+224 files in other folders)
