[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mmpartnet"
version = "0.1.0"
description = "MultiModal PARNET — condition the lab's PARNET (RNA-seq -> per-nt eCLIP profile) on a protein representation (RIBEX) to predict RBP binding, generalizing to RBPs without CLIP data. Emphasis on interpretability and honest competence bounds."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ML4RG SS26 Project 07 — MultiModal PARNET team" }]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "datasets>=4.0",
  "pyarrow>=15",
  "h5py>=3.10",
  "pyfaidx>=0.7",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
interp = ["captum>=0.7"]          # Integrated Gradients (optional)
esm = ["fair-esm>=2.0", "transformers>=4.40"]  # heavy; build_embeddings.py only
viz = ["matplotlib>=3.7", "jupyter>=1.0"]      # the demo notebooks (notebooks/demo/)
eclip = ["pybigtools>=0.3"]                    # per-nt eCLIP signal from ENCODE bigWigs (recover_demo_profile)
dev = ["pytest>=7", "ruff>=0.4", "nbstripout>=0.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/mmpartnet/tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"
